--- a/views/contact.html
+++ b/views/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Page Not Found</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
 
@@ -12,9 +12,9 @@
     <header class="main-header">
       <nav class="main-header__nav">
         <ul class="main-header__item-list">
-          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+          <li class="main-header__item"><a href="/">Shop</a></li>
           <li class="main-header__item">
-            <a href="/admin/add-product">Add Product</a>
+            <a class="active" href="/admin/add-product">Add Product</a>
           </li>
           <li class="main-header__item">
             <a class="active" href="/admin/contact">Contact Us</a>
@@ -22,6 +22,17 @@
         </ul>
       </nav>
     </header>
-    <h1>Page Not Found!</h1>
+
+    <main>
+      <form class="product-form" action="/admin/contact" method="POST">
+        <div class="form-control">
+          <label for="title">Name</label>
+          <input type="text" name="title" id="title" />
+          <label for="title">Email Id</label>
+          <input type="Email" name="title" id="title" />
+        </div>
+        <button type="submit">submit</button>
+      </form>
+    </main>
   </body>
 </html>
